load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["query.go"],
    importpath = "github.com/smukherj1/bajulate/cmd/query",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/starlark:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)

go_binary(
    name = "query",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
