load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["starlark.go"],
    importpath = "github.com/smukherj1/bajulate/pkg/starlark",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
